# kento-core

./: .gitignore  AIPOLICY.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md  container-lifecycle.md  getting-started.md  image-contract.md  library-guide.md  modes.md  osd.md  releasing.md  troubleshooting.md  vm-mode.md
src/kento/: __init__.py  _diagnosis.py  _images.py  _instances.py  _network.py  _platform.py  _references.py  _result.py  _storage.py  attach.py  cloudinit.py  create.py  defaults.py  destroy.py  diagnose.py  errors.py  exec_cmd.py  extract.py  fetch.py  hook.py  hook.sh  images.py  info.py  inject.py  inject.sh  layers.py  list.py  locking.py  logs.py  lxc_hook.py  portfwd.py  pve.py  reconcile.py  reset.py  set_cmd.py  start.py  stop.py  subprocess_util.py  suspend.py  urlvm.py  (+2 more)
tests/: conftest.py  test_adopt.py  test_attach.py  test_cli.py  test_cloudinit.py  test_create.py  test_create_locking.py  test_create_passthrough.py  test_defaults.py  test_destroy.py  test_diagnose.py  test_diagnose_module.py  test_diagnosis.py  test_errors.py  test_exec.py  test_extract.py  test_fetch.py  test_hold.py  test_hook.py  test_image_hold.py  test_image_ops.py  test_image_record.py  test_images.py  test_images_types.py  test_info.py  test_init.py  test_inject.py  test_input_validators.py  test_instances.py  test_layers.py  test_list.py  test_locking.py  test_logs.py  test_lxc_hook.py  test_network.py  test_platform.py  test_portfwd.py  test_pve.py  test_reconcile.py  test_references.py  (+13 more)
tests/e2e/: README.md  e2e-phase3.sh  kento-e2e.sh  library-smoke.py  live-m6.py
tests/fixtures/: README.md  build.sh
tests/fixtures/minimal-oci/: Dockerfile
tests/integration/: conftest.py  test_hook_version_v0.py  test_hook_version_v1.py  test_ns_cgroup_writes.py  test_portfwd_iptables_fallback.py  test_portfwd_multi.py  test_portfwd_parity.py  test_portfwd_worker.py  test_post_stop_cleanup.py  test_pre_mount_overlayfs.py  test_smoke.py
