[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kento-core"
version = "1.6.0.dev4"
description = "Kento core library — compose OCI images into LXC/VM system containers (importable engine)"
requires-python = ">=3.11"
license = "GPL-3.0-only"

# NO [project.scripts] — the console entry point lives in kento-cli (separate repo).

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kento = ["*.sh"]

[tool.pytest.ini_options]
addopts = "--ignore=tests/integration"
markers = [
    "integration: Tier 1 hook-execution tests (opt in via tests/integration/)",
]
